Fixed text & button overlaps

--- a/src/js/components/App/App.css
+++ b/src/js/components/App/App.css
@@ -7,6 +7,9 @@ body {
 
 .no-padding {
     padding: 0 !important;
+}
+
+.no-margin {
     margin: 0 !important;
 }
 
